--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="picHolder">
             <img width="110vh"
             height="100vh"
-              src="OnlineResume/images/nature.jpg"             
+              src="images/nature.jpg"             
               alt="My Pic"
             />
           </div>
@@ -199,7 +199,7 @@
         <tr class="subHeadingColor">
             <td class="empDetBold">
               <button type="button" class="imageBtn">
-              <img src="./OnlineResume/images/up.png" width="20vh"  alt ="Up arrow"/>
+              <img src="images/up.png" width="20vh"  alt ="Up arrow"/>
             </button>
               &nbsp;&nbsp;<label id ="lblEmp" for="">EMPLOYMENT</label>
             </td>                       
@@ -208,13 +208,13 @@
       </tr> 
         <tr>
             <td class="contactDet">
-              <img src="./OnlineResume/images/next-arrow.png" width="10vh"  alt ="Up arrow"/><b>Project Lead | Tech Mahindra | Chennai, India | July 2013 – Feb 2016</b><br>
+              <img src="images/next-arrow.png" width="10vh"  alt ="Up arrow"/><b>Project Lead | Tech Mahindra | Chennai, India | July 2013 – Feb 2016</b><br>
                   &nbsp;&nbsp;&nbsp; &nbsp; Quarterly award for the Best Performer in the team<br>
                   &nbsp;&nbsp;&nbsp; &nbsp; Pat on the Back Award for significant project contribution  in September 2014<br>
-              <img src="./OnlineResume/images/next-arrow.png" width="10vh"  alt ="Up arrow"/><b>Senior Associate | Cognizant | Chennai, India | Jan  2007 – Feb </b><br>	
+              <img src="images/next-arrow.png" width="10vh"  alt ="Up arrow"/><b>Senior Associate | Cognizant | Chennai, India | Jan  2007 – Feb </b><br>	
               &nbsp;&nbsp;&nbsp; &nbsp;Certificate of excellence from customer in February 2014<br>
               &nbsp;&nbsp;&nbsp; &nbsp;ASG Oscar award for the month of January 2013<br>
-              <img src="./OnlineResume/images/next-arrow.png" width="10vh"  alt ="Up arrow"/><b>Senior Software Engineering | Web India Global Web Solutions | July 2004 – Jan 2007</b>
+              <img src="images/next-arrow.png" width="10vh"  alt ="Up arrow"/><b>Senior Software Engineering | Web India Global Web Solutions | July 2004 – Jan 2007</b>
                     
             </td>
         </tr>
@@ -222,16 +222,16 @@
       <br>
             <table >
             <tr class="subHeadingColor">
-                <td class="empDetBold"><img src="./OnlineResume/images/up.png" width="20vh" alt ="Up arrow"/>&nbsp;&nbsp;PROJECTS
+                <td class="empDetBold"><img src="images/up.png" width="20vh" alt ="Up arrow"/>&nbsp;&nbsp;PROJECTS
                 </td>                       
             </tr> 
             <tr>
                 <td class="contactDet">
-                  <img src="./OnlineResume/images/next-arrow.png" width="10vh"  alt ="Up arrow"/><b>Chevron Engine Lubricant Testing Information System |</b>Quickly mastered and supported 30+ interfaces involving complex business rules.  Mentored and supported offshore teams to deliver quality enhancements.   Prepared technical documentation to serve as a guide for future employees. </br> 
+                  <img src="images/next-arrow.png" width="10vh"  alt ="Up arrow"/><b>Chevron Engine Lubricant Testing Information System |</b>Quickly mastered and supported 30+ interfaces involving complex business rules.  Mentored and supported offshore teams to deliver quality enhancements.   Prepared technical documentation to serve as a guide for future employees. </br> 
                     <b><i>Technologies Used:</i></b> ASP.NET (VB), Entity Framework, SQL Server 2008, SSIS, SSRS, SAP</br>
                     <b><i>Achievements:</i></b> Quickly mastered 30+ SSIS interfaces.  As a result, failures were greatly reduced and was much appreciated by the customer for achieving stability.<br><br>
 
-                    <img src="./OnlineResume/images/next-arrow.png" width="10vh"  alt ="Up arrow"/><b>International Tracking | </b>Mentored the team in development and maintenance of the project. Devised a Smart load balancer, which shared report generation among many servers. Scheduler was developed to automated data transfer according to region timings. Developed the Fielding and Activation for Parent & Kids survey. Automated static report generation for General & PK survey.<br>                     
+                    <img src="images/next-arrow.png" width="10vh"  alt ="Up arrow"/><b>International Tracking | </b>Mentored the team in development and maintenance of the project. Devised a Smart load balancer, which shared report generation among many servers. Scheduler was developed to automated data transfer according to region timings. Developed the Fielding and Activation for Parent & Kids survey. Automated static report generation for General & PK survey.<br>                     
                     <b><i>Technologies Used:</i></b> ASP.NET(C#), Webservices, SQL Server 2005, Visual Studio .NET 2005
                     <b><i>Achievements:</i></b> Implementation of Smart Load balancer for International Tracking Project which has optimized the server usage and eliminated the failures in processing of client reports.   This was well appreciated by the client.<br>                        
                 </td>
@@ -243,7 +243,7 @@
     <tr class="subHeadingColor">
         <td class="empDetBold">
           <button type="button" class="imageBtn">
-          <img src="./OnlineResume/images/up.png" width="20vh"  alt ="Up arrow"/>
+          <img src="images/up.png" width="20vh"  alt ="Up arrow"/>
         </button>
           &nbsp;&nbsp;<label id ="lblEmp" for="">Certications</label>
         </td>                       
@@ -252,18 +252,18 @@
   </tr> 
         <tr>
         <td class="contactDet">
-          <img src="./OnlineResume/images/next-arrow.png" width="10vh"  alt ="Up arrow"/><b>Microsoft Azure Fundamentals (AZ-900) Certification |</b> Microsoft | July 2024
+          <img src="images/next-arrow.png" width="10vh"  alt ="Up arrow"/><b>Microsoft Azure Fundamentals (AZ-900) Certification |</b> Microsoft | July 2024
             <br>
           </td>
          </tr>
         <tr>
          <td class="contactDet">                            
-          <img src="./OnlineResume/images/next-arrow.png" width="10vh"  alt ="Up arrow"/><b>Microsoft.NET certification (ASP.Net, .NET Framework, C# Fundamentals, OO Conept, UML, Data Modelling Concpets) |</b> Brain bench | September 2009<br>             
+          <img src="images/next-arrow.png" width="10vh"  alt ="Up arrow"/><b>Microsoft.NET certification (ASP.Net, .NET Framework, C# Fundamentals, OO Conept, UML, Data Modelling Concpets) |</b> Brain bench | September 2009<br>             
         </td>
       </tr>
       <tr>
         <td class="contactDet">
-          <img src="./OnlineResume/images/next-arrow.png" width="10vh"  alt ="Up arrow"/>Scrum Master training in Tech Mahindra for a week<br>
+          <img src="images/next-arrow.png" width="10vh"  alt ="Up arrow"/>Scrum Master training in Tech Mahindra for a week<br>
         </td>
       </tr>    
     </table>
@@ -272,7 +272,7 @@
       <tr class="subHeadingColor">
           <td class="empDetBold">
             <button type="button" class="imageBtn">
-            <img src="./OnlineResume/images/up.png" width="20vh"  alt ="Up arrow"/>
+            <img src="images/up.png" width="20vh"  alt ="Up arrow"/>
           </button>
             &nbsp;&nbsp;<label id ="lblEmp" for="">Education</label>
           </td>                       
@@ -281,13 +281,13 @@
     </tr> 
           <tr>
           <td class="contactDet">
-            <img src="./OnlineResume/images/next-arrow.png" width="10vh"  alt ="Up arrow"/><b>Per Scholas |</b> Software Engineering | Remote | March 2025
+            <img src="images/next-arrow.png" width="10vh"  alt ="Up arrow"/><b>Per Scholas |</b> Software Engineering | Remote | March 2025
               <br>
             </td>
            </tr>
           <tr>
            <td class="contactDet">                            
-            <img src="./OnlineResume/images/next-arrow.png" width="10vh"  alt ="Up arrow"/><b>Madras University |</b> Bachelor of Engineering: Instrumentation and Control | Chennai, India| April 2000<br>             
+            <img src="images/next-arrow.png" width="10vh"  alt ="Up arrow"/><b>Madras University |</b> Bachelor of Engineering: Instrumentation and Control | Chennai, India| April 2000<br>             
           </td>
         </tr>       
       </table>
